# JJBDiscordBot

./: .env  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  royalist
.github/: dependabot.yml
.github/workflows/: workflow.yml
